vcluster_versioned_docs/version-0.31.0/configure/vcluster-yaml/control-plane/components/backing-store/database/external.mdx
---
title: External database
sidebar_label: external
sidebar_position: 2
sidebar_class_name: pro host-nodes private-nodes
description: Configure an external database as the virtual cluster's backing store for enhanced performance and scalability.
---

import ConfigReference from "../../../../../../_partials/config/controlPlane/backingStore/database/external.mdx";
import ProAdmonition from "../../../../../../_partials/admonitions/pro-admonition.mdx";

import TenancySupport from '../../../../../../_fragments/tenancy-support.mdx';
import FeatureTable from '@site/src/components/FeatureTable';

<FeatureTable names="vcp-distro-external-database,external-database-rds-iam" />




<TenancySupport hostNodes="true" privateNodes="true"/>

<ProAdmonition />

## Introduction

This guide explains how to configure an external database as the backing store for a virtual cluster. A backing store is a persistent storage solution that maintains the state and data of the virtual cluster. Using an external database can provide better performance, scalability, and data persistence compared to the default embedded storage.

Configure this feature to use an external database such as MySQL or PostgreSQL for your virtual cluster's backing store.

```yaml title="External database configuration"
controlPlane:
  backingStore:
    database:
      external:
        enabled: true
        dataSource: CONNECTION_STRING
        connector: CONNECTOR_STRING
```

## Prerequisites

Before configuring an external database for your virtual cluster, ensure you have the following prerequisites based on your chosen method:

### Data source (direct connection)

- A running MySQL or PostgreSQL database server
- admin credentials and connection string for the database
- Network connectivity from the virtual cluster to the database server

### Connector (platform-managed)

:::important Platform Setup Required
The connector method requires the vCluster Platform to be installed and properly configured. This must be completed by an administrator before using external databases.
:::

1. [**vCluster Platform installation**](/platform/install/quick-start-guide): The platform must be installed and accessible in your Kubernetes cluster
2. [**Database connector secret**](/platform/administer/connector/database): A platform administrator must create a database connector secret
3. [**Platform API key**](/vcluster/configure/vcluster-yaml/platform): Your virtual cluster must be connected to the platform

:::info
The **connector** option provides automatic database provisioning, credential management, and cleanup when the virtual cluster is deleted. The **dataSource** option gives you direct control but requires manual database and user management.
:::

## Connector and data source

There are two mutually exclusive options for using an external backing store.

`dataSource`: assign a connection string to `dataSource` that the virtual cluster uses for its control plane backing store.

`connector`: assign a name of a [connector secret](/platform/administer/connector/database) that exists in an instance of the platform in the installed namespace. The platform uses the secret to automatically provision a separate database within the database server for the virtual cluster. It also creates a non-privileged user that can only interact with the virtual cluster's database. The virtual cluster receives a connection string built from the user and database.

|                               | Connector | DataSource |
| ----------------------------- | --------- | ---------- |
| MySQL Support                 | Yes       | Yes        |
| PostgreSQL Support            | Yes       | Yes        |
| Share Across virtual clusters | Yes       | No         |
| Automatic DB Cleanup          | Yes       | No         |
| Credential stored in secret   | Yes       | No         |

### Datasource configuration

Replace `CONNECTION_STRING` with the connection string for your database. Examples:

- PostgreSQL: `postgres://username:password@hostname:5432/vcluster-db`
- MySQL: `mysql://root:password@tcp(192.168.86.9:3306)/vcluster`

### Connector configuration

After completing the [prerequisites](#connector-platform-managed), reference the connector secret in your virtual cluster configuration:

```yaml title="Connector configuration"
controlPlane:
  backingStore:
    database:
      external:
        enabled: true
        connector: my-database-connector  # Name of the connector secret created above
```

:::note
The virtual cluster must be [connected to the platform](/vcluster/configure/vcluster-yaml/platform) to use the connector. This enables centralized management and monitoring of virtual clusters.
:::

## Network policies
If you are using [network policies](../../../../policies/network-policy.mdx), the virtual cluster control plane traffic to the external database must be allowed.

```yaml title="vcluster.yaml"
policies:
  networkPolicy:
    controlPlane:
      egress:
        # Allow outgoing traffic to the mysql database server.
        - to:
            - ipBlock:
                cidr: 192.168.86.9/32
          ports:
            - port: 3306
              protocol: TCP

        # Allow outgoing traffic to the postgres database server private subnets.
        - to:
            - ipBlock:
                cidr: 10.0.0.0/24
            - ipBlock:
                cidr: 10.0.1.0/24
            - ipBlock:
                cidr: 10.0.2.0/24
          ports:
            - port: 5432
              protocol: TCP
```

## Config reference

<ConfigReference />
